@@ -287,36 +287,6 @@ interface Content {
 	// TODO: make RenderOutput and RenderOptions base classes
 
 	/**
-	 * Returns a list of DataUpdate objects for recording information about this
-	 * Content in some secondary data store. If the optional second argument,
-	 * $old, is given, the updates may model only the changes that need to be
-	 * made to replace information about the old content with information about
-	 * the new content.
-	 *
-	 * @deprecated since 1.32, call and override
-	 *   ContentHandler::getSecondaryDataUpdates instead.
-	 *
-	 * @note Implementations should call the SecondaryDataUpdates hook, like
-	 *   AbstractContent does.
-	 *
-	 * @param Title $title The context for determining the necessary updates
-	 * @param Content|null $old An optional Content object representing the
-	 *    previous content, i.e. the content being replaced by this Content
-	 *    object.
-	 * @param bool $recursive Whether to include recursive updates (default:
-	 *    false).
-	 * @param ParserOutput|null $parserOutput Optional ParserOutput object.
-	 *    Provide if you have one handy, to avoid re-parsing of the content.
-	 *
-	 * @return DataUpdate[] A list of DataUpdate objects for putting information
-	 *    about this content object somewhere.
-	 *
-	 * @since 1.21
-	 */
-	public function getSecondaryDataUpdates( Title $title, Content $old = null,
-		$recursive = true, ParserOutput $parserOutput = null );
-
-	/**
 	 * Construct the redirect destination from this content and return an
 	 * array of Titles, or null if this content doesn't represent a redirect.
 	 * The last element in the array is the final destination after all redirects
